@@ -8,9 +8,6 @@
     <artifactId>photon</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>photon-scala</module>
-    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -103,6 +100,7 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
+                                <source>src/main/kotlin</source>
                                 <source>target/generated-sources/kapt</source>
                             </sourceDirs>
                         </configuration>
@@ -124,37 +122,37 @@
                     <jvmTarget>17</jvmTarget>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <compilerArgs>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED</arg>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.library=ALL-UNNAMED</arg>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>
-                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>compile</id>-->
+<!--                        <phase>compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>compile</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>testCompile</id>-->
+<!--                        <phase>test-compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>testCompile</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <source>11</source>-->
+<!--                    <target>11</target>-->
+<!--                    <compilerArgs>-->
+<!--                        <arg>&#45;&#45;add-exports=org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED</arg>-->
+<!--                        <arg>&#45;&#45;add-exports=org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>-->
+<!--                        <arg>&#45;&#45;add-exports=org.graalvm.truffle/com.oracle.truffle.api.library=ALL-UNNAMED</arg>-->
+<!--                        <arg>&#45;&#45;add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>-->
+<!--                        <arg>&#45;&#45;add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>-->
+<!--                    </compilerArgs>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
         <pluginManagement>
             <plugins>
